--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .aesthetic-header{
     height: 151px;
     width: 100%;
@@ -10,3 +9,22 @@
     background-color: #dadbd3;
 }
 
+.container-main{
+    height: 90%;
+    width: 90%;
+    background-color: lightgray;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+}
+
+.container-main *{
+    height: 100%;
+}
+
+.scrollbar-contacts{
+    width: 557px;
+    background-color: white;
+}
