--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,13 @@
     --var--beige: #f3eeea;
 }
 
+img{
+    width: 10%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    object-position: center;
+}
+
 .aesthetic-header{
     height: 151px;
     width: 100%;
@@ -27,6 +34,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 9999;
+    font-size: 13px;
 }
 
 .scrollbar-contacts{
@@ -54,4 +62,17 @@
 
 .input-chat{
     background-color: var(--var--beige);
+}
+
+.user-name{
+    font-weight: bold;
+}
+
+.text{
+    width: 100%;
+}
+
+.last-massage,
+.time{
+    color: lightgrey;
 }
