CORRECT cognome Davers

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@ img{
 }
 
 .scrollbar-contacts{
+    border-right: 1px solid rgba(128, 128, 128, 0.373);
     width: 540px;
     background-color: var(--var--white);
 }
